--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
-world.function(){
+window.onload =function(){
 
 <!DOCTYPE html>
-<html>
+<html lang="eng">
+<head>
+<meta charset="UTF-8">
+<h1>Wray Farias - Web Developer</h1>
+</head>
 <body>
 
-<h1>Wray Farias - Web Developer<h1>
+<ul>
+<li>Home</li>
+<li>About Me</li>
+<li>Blog</li>
+<li>Contact me</li>
+</ul>
+<h2>She is the slayer.</h2>
+
+<h3>May 9th, 2014</h3>
+
+<img src="1.jpg" alt = cat playing in snow></img>
+
+<p></p>
 
 
 
@@ -48,12 +64,8 @@ world.function(){
 
 
 
-
-
-
-
-
-
+</body>
+</html>
 
 
 
