--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
-window.onload =function(){
+
 
 <!DOCTYPE html>
 <html lang="eng">
 <head>
 <meta charset="UTF-8">
 <h1>Wray Farias - Web Developer</h1>
+  <link rel="stylesheets" href="css/styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <script src="js/app.js"></script>
+
 </head>
 <body>
 
 <ul>
-<li>Home</li>
-<li>About Me</li>
-<li>Blog</li>
-<li>Contact me</li>
+<li><a href="#"> Home</a> </li>
+<li><a href="#"> About Me</a> </li>
+<li><a href="#"> Blog</a> </li>
+<li><a href="#"> Contact me</a> </li>
 </ul>
 <h2>She is the slayer.</h2>
 
-<h3>May 9th, 2014</h3>
+<h4>May 9th, 2014</h4>
 
-<img src="1.jpg" alt = cat playing in snow></img>
+<img src =""alt = cat playing </img>
 
-<p></p>
+<p>The only way some people can find a purpose in life is by becoming obsessed with<b> demons </b>. In my world, we have people in chains, and we can ride them like ponies. It eats you, starting with the bottom. <u>I've got four brothers, none of them Democrats.</u>  Hey I could whip up a love slave any day I wanted. No need little lady, your tears of gratitude are enough for me.</p> <font>
 
+<p> Risk the pain, it is your nature. Oh my god! Did it sing? Easy as really difficult pie. I dislike that that Anya. She's newly human and strangely literal.
+Battle wounds are nothing new to me, preacher. One of my personalities happens to be a multiple personality, but that doesn't make me a multiple personality. See, morbid and creepfying, I got no problem with, long as she does it quiet-like.
 
+<h2>Foose Ball Tournament Results</h2>
+
+<h4>April 20th, 2014</h4>
 
 
 
@@ -73,4 +82,3 @@ window.onload =function(){
 
 
 
-}
